--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <button id="searchBtn">Buscar</button>
     </div>
 
-    <div id="results" class="results"></div>
+    <div id="results" class="results">
+
+    
+    </div>
 
 
    <script src="script.js"></script>
