--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick and Morty API</title>
-    <link rel="stylesheet" href="style.css">
-     
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dragon Ball - Personagens</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rick and Morty - Personagens</h1>
+  <h1>Dragon Ball - Personagens</h1>
 
-    <div class="search-box">
-        <input type="number" id="pageInput" min="1" placeholder="Digite uma página (1/42)">
-        <button id="searchBtn">Buscar</button>
-    </div>
+  <div class="controls">
+    <input type="number" id="pageInput" min="1" value="1">
+    <button onclick="loadCharacters()">Buscar</button>
+  </div>
 
-    <div id="results" class="results">
+  <div id="charactersGrid" class="grid"></div>
 
-    
-    </div>
-
-
-   <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
